--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body
+
 {
 	background-color: #0000;
 	margin:0;
@@ -891,8 +892,8 @@ h4
 		border:2px solid #ffbb00;
 	  margin-top:-20px;
 	  margin-bottom:20px;
-		margin-left: 160px;
-		margin-right: 160px;
+		margin-left: 165px;
+		margin-right: 165px;
 	}
 
 .login
@@ -960,7 +961,7 @@ button
 
 
  /*Seventeen section*/
-/*.seventeen
+.SECTION-SEVENTEEN
 {
 	border:0px solid red;
 	height:450px;
@@ -968,7 +969,7 @@ button
 	background-color: #2c2e2d;
 }
 
-#img-9
+#img-footer
 {
 	height:80px;
 	width:80px;
@@ -980,7 +981,7 @@ button
 }
 
 
-	#line-8
+	#line-footer
 	{
 		width:200px;
 		border:1px solid #ffbb00;
@@ -991,31 +992,35 @@ button
 	  
 	}
 
-.list-2
+.list-footer-1
 {
 	color:white;
 	text-align: center;
 	padding-top: 50px;
 	padding-bottom: 50px;
-
-
-
+	float:left;
+	
 }
-.list-3
+
+#l-float,ol
+{
+		font-family: "Times New Roman", Times, serif;
+     float:left;
+		list-style-type: none;
+}
+
+
+
+
+.list-footer-2
 {
 	color:white;
 	text-align: center;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	
-
-
 }
 
-#l-3
-{
-		font-family: "Times New Roman", Times, serif;
-}
 
 .number
 {
