--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -96,7 +96,6 @@ body {
         margin-bottom:20px;
     }
     .sec-2 {
-        height:;
         width:100%;
         background-color:#f0f0f0;
         margin:0;
@@ -195,7 +194,71 @@ body {
         padding-top: 30px;
         
     }
+/*****************************START-SECTION-FIVE**************************************************/
+    .SECTION-FIVE{
+        width:100%;
+        height:200px;
+        padding:0;
+        margin:0;
+    }
+    .sec-5{
+        margin-left:auto;
+        margin-right:auto;
+        height:100%;
+        width:100%;   
+    }
+    
+    .sec-6{
+        margin-left:auto;
+        margin-right:auto;
+        height:100%;
+        width:100%;     
+    }
+    
+    .sec-7{
+        margin-left:auto;
+        margin-right:auto;
+        height:100%;
+        width:100%;    
+    }
+    
+    #google-plus{
+        height:40px;
+        width:40px;
+        float:left;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left:20px;
+    }
+    
+    #heading-graphics{
+        font-family:Arial, Helvetica, sans-serif;
+        color:gray;
+        font-size: 20PX;
+        padding-top:10px;
+        padding-left:20px;
+        float:left;
+        
+        
+    }
+    
+    #para-google{
+        float:left;
+        font-family:Arial, Helvetica, sans-serif;                                                  
+        text-align: justify;
+        justify-content: center;
+        font-size:14px;
+        color:gray;
+        letter-spacing: 1px;
+        line-height: 1.4;
+        font-weight: 600px;
+        width:200px;
+        padding-left: 20px;
+       
+        
+    }
 }
+/**************************END-SECTION-ONE*******************************************/
 
 /******************FOR MOBILE-M-375******************/
 
@@ -259,34 +322,7 @@ body {
         width:100%;
         height: auto;
     }
-    /***********section about-us********************/
-   /* .SECTION-THIRD {
-        width:100%;
-        height:300px;
-        background-color:#f0f0f0;
-        margin:0;
-        padding-top:0; 
-    }
-    .sec-1 {
-        height:100%;
-        width:100%;
-    }
-    #aboutus{
-        text-align:center;
-        font-family:Arial, Helvetica, sans-serif;
-        font-size: 36px;
-        margin:0;
-        padding:0;
-        padding-top: 20px;
-    }
-    #aboutus-line{
-        width:38px;
-        border:2px solid #ffbb00;
-        margin-left:auto;
-        margin-right:auto;
-        margin-top:20px;
-        margin-bottom:20px;
-    }/*
+
     /***********section about-us********************/
     .SECTION-THIRD {
         width:100%;
@@ -410,8 +446,72 @@ body {
         padding-top: 30px;
         
     }
+/************************* STRAT-SECTION-FIVE***********************************************/
+    .SECTION-FIVE{
+        width:100%;
+        height:200px;
+        padding:0;
+        margin:0;
+    }
+    .sec-5{
+        margin-left:auto;
+        margin-right:auto;
+        height:100%;
+        width:100%   
+    }
+    
+    .sec-6{
+        margin-left:auto;
+        margin-right:auto;
+        height:100%;
+        width:100%;
+    }
+    
+    .sec-7{
+        margin-left:auto;
+        margin-right:auto;
+        height:100%;
+        width:100%;   
+    }
+    
+    #google-plus{
+        height:40px;
+        width:40px;
+        float:left;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left:20px;
+    }
+    
+    #heading-graphics{
+        font-family:Arial, Helvetica, sans-serif;
+        color:gray;
+        font-size: 20PX;
+        padding-top:10px;
+        padding-left:30px;
+        float:left;
+        
+        
+    }
+    
+    #para-google{
+        float:left;
+        font-family:Arial, Helvetica, sans-serif;                                                  
+        text-align: justify;
+        justify-content: center;
+        font-size:14px;
+        color:gray;
+        letter-spacing: 1px;
+        line-height: 1.4;
+        font-weight: 600px;
+        width:250px;
+        padding-left: 35px;
+       
+        
+    }   
     
 }
+
 
 
 /******************FOR MOBILE-L-425******************/
@@ -604,6 +704,71 @@ body {
         padding-top: 30px;
         
     }
+
+
+/************************* STRAT-SECTION-FIVE***********************************************/
+    .SECTION-FIVE{
+        width:100%;
+        height:200px;
+        padding:0;
+        margin:0;
+    }
+    .sec-5{
+        margin-left:auto;
+        margin-right:auto;
+        height:100%;
+        width:100%;   
+    }
+    
+    .sec-6{
+        margin-left:auto;
+        margin-right:auto;
+        height:100%;
+        width:100%;     
+    }
+    
+    .sec-7{
+        margin-left:auto;
+        margin-right:auto;
+        height:100%;
+        width:100%;
+    }
+    
+    #google-plus{
+        height:40px;
+        width:40px;
+        float:left;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left:20px;
+    }
+    
+    #heading-graphics{
+        font-family:Arial, Helvetica, sans-serif;
+        color:gray;
+        font-size: 20PX;
+        padding-top:10px;
+        padding-left:30px;
+        float:left;
+        
+        
+    }
+    
+    #para-google{
+        float:left;
+        font-family:Arial, Helvetica, sans-serif;                                                  
+        text-align: justify;
+        justify-content: center;
+        font-size:15px;
+        color:gray;
+        letter-spacing: 1px;
+        line-height: 1.4;
+        font-weight: 600px;
+        width:290px;
+        padding-left: 35px;
+       
+        
+    }  
     
     
 }
@@ -809,6 +974,79 @@ body {
             padding-top: 160px;
             
         }
+
+
+/************************* STRAT-SECTION-FIVE***********************************************/
+.SECTION-FIVE{
+    width:100%;
+    height:250px;
+    padding:0;
+    margin:0;
+}
+.sec-5{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:left;
+    
+   
+}
+
+.sec-6{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:left;
+    
+    
+}
+
+.sec-7{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:right;
+   
+}
+
+#google-plus{
+    height:40px;
+    width:40px;
+    float:left;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left:5px;
+}
+
+#heading-graphics{
+    font-family:Arial, Helvetica, sans-serif;
+    color:gray;
+    font-size: 20PX;
+    padding-top:10px;
+    padding-left:10px;
+    float:left;
+    
+    
+}
+
+#para-google{
+    float:left;
+    font-family:Arial, Helvetica, sans-serif;                                                  
+    text-align: justify;
+    justify-content: center;
+    font-size:14px;
+    color:gray;
+    letter-spacing: 1px;
+    line-height: 1.4;
+    font-weight: 600px;
+    width:175px;
+    padding-left: 15px;
+   
+    
+}          
 }
 
 
@@ -1012,6 +1250,77 @@ body {
                 padding-top: 198px;
                 
             }
+ /************************* STRAT-SECTION-FIVE***********************************************/
+.SECTION-FIVE{
+    width:100%;
+    height:280px;
+    padding:0;
+    margin:0;
+}
+.sec-5{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:left;
+    
+   
+}
+
+.sec-6{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:left;
+    
+    
+}
+
+.sec-7{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:right;
+   
+}
+
+#google-plus{
+    height:40px;
+    width:40px;
+    float:left;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left:20px;
+}
+
+#heading-graphics{
+    font-family:Arial, Helvetica, sans-serif;
+    color:gray;
+    font-size: 20PX;
+    padding-top:40px;
+    padding-left:20px;
+    float:left;
+    
+    
+}
+
+#para-google{
+    float:left;
+    font-family:Arial, Helvetica, sans-serif;                                                  
+    text-align: justify;
+    justify-content: center;
+    font-size:14px;
+    color:gray;
+    letter-spacing: 1px;
+    line-height: 1.4;
+    font-weight: 600px;
+    width:225px;
+    padding-left: 20px;
+   
+    
+}  
 }
 
 /******************FOR LAPTOP-L-1440******************/
@@ -1030,7 +1339,7 @@ body {
     }
     #log-img {
         height:auto;
-        width:25px;
+        width:30px;
         padding-left: 15px;
         padding-right: 15px;
         float:left;
@@ -1214,6 +1523,78 @@ body {
                 
             }
 
+  /************************* STRAT-SECTION-FIVE***********************************************/
+.SECTION-FIVE{
+    width:100%;
+    height:280px;
+    padding:0;
+    margin:0;
+}
+.sec-5{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:left;
+    
+   
+}
+
+.sec-6{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:left;
+    
+    
+}
+
+.sec-7{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:right;
+   
+}
+
+#google-plus{
+    height:50px;
+    width:50px;
+    float:left;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left:30px;
+}
+
+#heading-graphics{
+    font-family:Arial, Helvetica, sans-serif;
+    color:gray;
+    font-size: 25PX;
+    padding-top:40px;
+    padding-left:40px;
+    float:left;
+    
+    
+}
+
+#para-google{
+    float:left;
+    font-family:Arial, Helvetica, sans-serif;                                                  
+    text-align: justify;
+    justify-content: center;
+    font-size:14px;
+    color:gray;
+    letter-spacing: 1px;
+    line-height: 1.4;
+    font-weight: 600px;
+    width:320px;
+    padding-left: 45px;
+   
+    
+}            
+
 }
 
 /******************FOR 1880******************/
@@ -1318,7 +1699,7 @@ body {
     }
     #log-img {
         height:auto;
-        width:25px;
+        width:40px;
         padding-left: 40px;
         padding-right: 40px;
         float:left;
@@ -1508,6 +1889,78 @@ body {
         padding-top: 270px;
         
     }
+
+ /************************* STRAT-SECTION-FIVE***********************************************/
+ .SECTION-FIVE{
+    width:100%;
+    height:400px;
+    padding:0;
+    margin:0;
+}
+.sec-5{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:left;
+    
+   
+}
+
+.sec-6{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:left;
+    
+    
+}
+
+.sec-7{
+    margin-left:auto;
+    margin-right:auto;
+    height:100%;
+    width:33.33%;
+    float:right;
+   
+}
+
+#google-plus{
+    height:100px;
+    width:100px;
+    float:left;
+    padding-top: 60px;
+    padding-bottom: 50px;
+    padding-left:45px;
+}
+
+#heading-graphics{
+    font-family:Arial, Helvetica, sans-serif;
+    color:gray;
+    font-size: 40PX;
+    padding-top:50px;
+    padding-left:50px;
+    float:left;
+    
+    
+}
+
+#para-google{
+    float:left;
+    font-family:Arial, Helvetica, sans-serif;                                                  
+    text-align: justify;
+    justify-content: center;
+    font-size:20px;
+    color:gray;
+    letter-spacing: 2px;
+    line-height: 1.8;
+    font-weight: 600px;
+    width:550px;
+    padding-left: 60px;
+   
+    
+}            
 }
 
 
