--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -216,7 +216,7 @@ progress:after{
 
 
 
-/******************************************************Fifth section**************************************/
+/**********************************Fifth section**************************************/
 .SECTION-FIVE{
 	width:100%;
 	height:325px;
@@ -336,7 +336,7 @@ progress:after{
 
 
 
-/*******************************************************seventh section**************************************************************/
+/**************************STRAT-SECTION-SEVEN****************************************/
 .SECTION-SEVEN{
 	height:250px;
 	width:100%;
@@ -409,7 +409,7 @@ a{
 
 
 
-/***********************************************Eighth section*************************************************************/
+/***************************START-SECTION-EIGHT*****************************************************/
 .SECTION-EIGHT{
 	width:100%;
 	height:600px;
@@ -462,7 +462,7 @@ a{
 
 
 
-/**********************************************************Thenth section*********************************************************************/
+/***********************START-SECTION-TEN****************************************/
 .SECTION-TEN{
 	width:100%;
 	height:400px;
@@ -495,7 +495,7 @@ a{
 	
 	
 }
-/************************************************************Eleventh section************************************************/
+/**************************START-SECTION-ELEVEN*****************************/
 .SECTION-ELEVEN{
 	width:100%;
 	height:360px;
